@@ -222,3 +222,29 @@ $l['eventPrivateChecked']= 'Obavjest: Ukoliko je događaj označen kao privatan,
 $l['show_completed_tasks']= "Prikaži završene zadatke";
 $l['showStatuses']='Prikaži statuse događaja u pregledima';
 $l['cantMoveRecurringByDay']="Ne možete premjestiti događaje koji se ponavljaju tjedno na druge dane na ovaj način. Otvorite događaj i izmjenite postavke ponavljanja.";
+
+$l['resource_confirmed_mail_body']='%s je rezervirao resurs \'%s\' i potvrdio rezervaciju. Vi održavate ovaj resurs. Koristite poveznicu ukoliko želite odbiti rezervaciju.';
+$l['updateReponses']['NEEDS-ACTION']='%s je označio događaj %s kao neodlučeno';
+$l['sendUpdateNotification']='Želite li obavjestiti sudionike o promjenama porukom e-pošte?';
+$l['eventNotSavedSubject']= 'Događaj nije spremljen u %event kalendar "%cal"';
+$l['eventNotSavedBody']= 'Ova poruka je iz vašeg %goname kalendara. %goname je pokušao uvoz događaja "%event" sa početnim vremenom %starttime iz vanjskog kalendara u kalendar "%cal", ali nije uspjelo jer događaj sadrži greške. Događaj se vjerovatno još uvijek nalazi u vanjskom kalendaru.'.
+$l['usedResources']= 'Korišteni resursi';
+$l['shareCalendarsCron']= 'Ažuriraj dijeljene kalendarske datoteke';
+$l['shareCalendarsCronDescription']= 'Ažuriraj dijeljene kalendarske datoteke kalendara koji su objavljeni';
+$l['cmdPrintView']= 'Ispis trenutnog prikaza';
+$l['cmdPrintCategoryCount']= 'Ispis brojanja po kategoriji';
+$l['startDate']= 'Početni datum';
+$l['endDate']= 'Završni datum';
+$l['eventsPerCategoryCount']= 'Broj događaja za svaku kategoriju';
+$l['nextMonth']= 'Sljedeći mjesec';
+$l['previousMonth']= 'Prethodni mjesec';
+$l['till']= 'till';
+$l['total']= 'Ukupno';
+$l['sendNotificationToNewParticipants']='Želite li poslati obavjest e-poštom samo sudionicima koje ste sada dodali?';
+$l['newParticipants']='Novi sudionici';
+$l['allParticipants']='Svi sudionici';
+$l['noParticipants']='Bez sudionika';
+$l['cannotHandleInvitation']='Na kalendar povezan sa računom e-pošte "%s" nemate dozvolu pisanja. Sastanak je u tom kalendaru i njegov status nije izmjenjen.';
+$l['cannotHandleInvitation2']='Nije moguće ažurirati događaj zato što nemate dovoljne ovlasti nad kalendarom povezanim sa ovim račun e-pošte (kalendar: "%s"). Sastanak je u tom kalendaru i njegov status nije izmjenjen.';
+$l['tooltip']= 'Pomoćni tekst';
+$l['moveEventResourceError']= 'Nije moguće premjestiti događaj zato što sljedeći resursi nisu dostupni:';
